[gd_scene load_steps=9 format=3 uid="uid://yfeq2kd77xiu"]

[ext_resource type="Script" path="res://scenes/Game/hud.gd" id="1_yiyiu"]
[ext_resource type="PackedScene" uid="uid://6l4w61rf18jd" path="res://scenes/Game/pause_menu.tscn" id="6_1lw7w"]
[ext_resource type="PackedScene" uid="uid://y4j8wtgf7p6k" path="res://scenes/Game/evolution_menu.tscn" id="7_0yy7y"]
[ext_resource type="LabelSettings" uid="uid://cx2a532ok4y42" path="res://resources/labels/wasted.tres" id="7_70qvw"]
[ext_resource type="PackedScene" uid="uid://cavv5dbltjqmp" path="res://scenes/Menus/FinalScoreContainer.tscn" id="16_tbswg"]
[ext_resource type="FontFile" uid="uid://bxidviks1lwgv" path="res://assets/fonts/AveriaSerifLibre-Regular.ttf" id="17_viypj"]
[ext_resource type="LabelSettings" uid="uid://d0xafy67rfe8g" path="res://resources/labels/title1.tres" id="18_sj7dm"]

[sub_resource type="LabelSettings" id="LabelSettings_disly"]
font = ExtResource("17_viypj")
font_size = 30

[node name="hud" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_yiyiu")

[node name="Score" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ScoreLabel" type="Label" parent="Score"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -162.5
offset_right = 162.5
offset_bottom = 128.0
grow_horizontal = 2
size_flags_vertical = 0
text = "000"
label_settings = ExtResource("18_sj7dm")
horizontal_alignment = 1
vertical_alignment = 1

[node name="DeathContainer" type="PanelContainer" parent="."]
process_mode = 3
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="DeathLabel" type="Label" parent="DeathContainer"]
layout_mode = 2
text = "You went extinct"
label_settings = ExtResource("7_70qvw")
horizontal_alignment = 1
vertical_alignment = 1

[node name="FinalScoreContainer" parent="." instance=ExtResource("16_tbswg")]
layout_mode = 1
mouse_filter = 2

[node name="CycleLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -150.0
offset_bottom = 34.0
grow_horizontal = 0
text = "Cycle 9999
"
label_settings = SubResource("LabelSettings_disly")

[node name="pause_menu" parent="." instance=ExtResource("6_1lw7w")]
layout_mode = 1

[node name="evolution_menu" parent="." instance=ExtResource("7_0yy7y")]
layout_mode = 1
